--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@hookform/resolvers": "^2.5.2",
-    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -14,6 +13,7 @@
     "framer-motion": "^4.1.17",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.8.3",
     "react-icons": "^4.2.0",
